examples/codegen/string_builder.an
import StringBuilder

main () =
    var sb: StringBuilder = empty ()
    reserve (mut sb) 10
    append (mut sb) "你好，"
    append (mut sb) " World!"

    print (to_string sb)

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/string_builder.an:1:8
//   | // error: Imports paths should have at least 2 components (e.g. `Foo.Bar`), otherwise nothing gets imported
// 1 | import StringBuilder
//   |        ^^^^^^^^^^^^^
// 
// examples/codegen/string_builder.an:3:1
// 3 | main () =	// error: Expected a top-level item but found a newline
//   | 
// 4 |     var sb: StringBuilder = empty ()
// 
// examples/codegen/string_builder.an:4:13
// 3 | main () =
// 4 |     var sb: StringBuilder = empty ()	// error: `StringBuilder` not found in scope
//   |             ^^^^^^^^^^^^^
// 5 |     reserve (mut sb) 10
// 
// examples/codegen/string_builder.an:4:29
// 3 | main () =
// 4 |     var sb: StringBuilder = empty ()	// error: `empty` not found in scope
//   |                             ^^^^^
// 5 |     reserve (mut sb) 10
// 
// examples/codegen/string_builder.an:5:5
// 4 |     var sb: StringBuilder = empty ()
// 5 |     reserve (mut sb) 10	// error: `reserve` not found in scope
//   |     ^^^^^^^
// 6 |     append (mut sb) "你好，"
// 
// examples/codegen/string_builder.an:6:5
// 5 |     reserve (mut sb) 10
// 6 |     append (mut sb) "你好，"	// error: `append` not found in scope
//   |     ^^^^^^
// 7 |     append (mut sb) " World!"
// 
// examples/codegen/string_builder.an:7:5
// 6 |     append (mut sb) "你好，"
// 7 |     append (mut sb) " World!"	// error: `append` not found in scope
//   |     ^^^^^^
// 
// examples/codegen/string_builder.an:9:5
//    |     // error: Multiple matching implicits found for type Print _ required by parameter 2: print_bool, print_char, print_i8, print_i16, print_i32, ..
//  9 |     print (to_string sb)
//    |     ^^^^^
// 
// examples/codegen/string_builder.an:9:12
//  9 |     print (to_string sb)	// error: `to_string` not found in scope
//    |            ^^^^^^^^^
// 
// Found 9 errors and 0 warnings

